--- a/index.html
+++ b/index.html
@@ -8,8 +8,34 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to My Portfolio</h1>
-        <p>This is my personal portfolio website. More content coming soon!</p>
+        <!-- About Section -->
+        <section id="about">
+            <h1>About Me</h1>
+            <p>Hello! I'm Angelos Stergiou, a passionate data enthusiast showcasing my independent projects.I come from Greece, Athens and currently live in Vienna, Austria. 
+                I have completed my degree in Statistics & Insurance Science at university of Piraeus and then moved to Austria where i completed my masters in Applied Statistics at JKU, Linz.
+                Currently working as a Data Scientist in a company for the past 3 years.
+            </p>
+        </section>
+
+        <!-- Projects Section -->
+        <section id="projects">
+            <h1>Projects</h1>
+            <div class="project">
+                <h2>Project 1:XXX</h2>
+                <p>xxxxxxxxx. <a href="#">View Project</a></p>
+            </div>
+            <div class="project">
+                <h2>Project 2:YYY</h2>
+                <p>yyyyyy. <a href="#">View Project</a></p>
+            </div>
+        </section>
+
+        <!-- Contact Section -->
+        <section id="contact">
+            <h1>Contact</h1>
+            <p>Let's connect! Feel free to reach me at <a href="mailto:angelosstergiou.ath93@gmail.com">angelosstergiou.ath93@gmail.com</a></p>
+        </section>
     </div>
 </body>
+
 </html>
