--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
         <!-- About Section -->
         <section id="about">
             <h1>About Me</h1>
-            <p>Hello! I'm Angelos Stergiou, a passionate data enthusiast showcasing my independent projects.I come from Greece, Athens and currently live in Vienna, Austria. 
-                I have completed my degree in Statistics & Insurance Science at university of Piraeus and then moved to Austria where i completed my masters in Applied Statistics at JKU, Linz.
-                Currently working as a Data Scientist in a company for the past 3 years.
+            <p>Hello! I'm Angelos Stergiou, a passionate data enthusiast specializing in statistical analysis and data science. 
+                Originally from Athens, Greece, I currently reside in Vienna, Austria. I hold a degree in Statistics & Insurance Science from the University of Piraeus 
+                and a master's in Applied Statistics from JKU Linz. 
+                With a strong foundation in data analytics, machine learning, and statistical modeling, I have been working as a Data Scientist for the past three years, 
+                leveraging data-driven insights to solve complex problems. This portfolio showcases my independent projects & examples of my daily work, 
+                where I explore real-world datasets, develop analytical tools, and apply innovative solutions to challenging data problems.
             </p>
         </section>
 
