--- a/index.html
+++ b/index.html
@@ -1,44 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Angelos Stergiou Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <!-- About Section -->
-        <section id="about">
-            <h1>About Me</h1>
-            <p>Hello! I'm Angelos Stergiou, a passionate data enthusiast specializing in statistical analysis and data science. 
-                Originally from Athens, Greece, I currently reside in Vienna, Austria. I hold a degree in Statistics & Insurance Science from the University of Piraeus 
-                and a master's in Applied Statistics from JKU Linz. 
-                With a strong foundation in data analytics, machine learning, and statistical modeling, I have been working as a Data Scientist for the past three years, 
-                leveraging data-driven insights to solve complex problems. This portfolio showcases my independent projects & examples of my daily work, 
-                where I explore real-world datasets, develop analytical tools, and apply innovative solutions to challenging data problems.
-            </p>
-        </section>
+---
+layout: default
+title: Angelos Stergiou Portfolio
+---
 
-        <!-- Projects Section -->
-        <section id="projects">
-            <h1>Projects</h1>
-            <div class="project">
-                <h2>Project 1:XXX</h2>
-                <p>xxxxxxxxx. <a href="#">View Project</a></p>
-            </div>
-            <div class="project">
-                <h2>Project 2:YYY</h2>
-                <p>yyyyyy. <a href="#">View Project</a></p>
-            </div>
-        </section>
+## About Me
+Hello! I'm Angelos Stergiou, a data scientist specializing in statistical analysis and machine learning.
 
-        <!-- Contact Section -->
-        <section id="contact">
-            <h1>Contact</h1>
-            <p>Let's connect! Feel free to reach me at <a href="mailto:angelosstergiou.ath93@gmail.com">angelosstergiou.ath93@gmail.com</a></p>
-        </section>
-    </div>
-</body>
+## Projects
+- **[Project 1: Data Analysis](#)** - A detailed case study using open datasets.
+- **[Project 2: Web Scraping](#)** - A Python-based web scraping tool for real-time data.
 
-</html>
+## Contact
+📧 Reach me at: [angelosstergiou.ath93@gmail.com](mailto:angelosstergiou.ath93@gmail.com)
